<resources>
    <string name="app_name">GitHub</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="auth_login">sign in with github</string>
    <string name="auth_canceled">authentication failed</string>
    <string name="get_user_rep">Repositories</string>
    <string name="get_user_issue">Issues</string>
    <string name="get_user_error">Get user error</string>
    <string name="logout">Log Out</string>
    <string name="title_repositories">Repositories</string>
    <string name="title_organizations">Organizations</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="number">#%s</string>
    <string name="path" translatable="false">%s / %s #%d</string>
    <string name="auth_terms">By signing in you accept our Terms of use and Privacy policy.</string>
    <string name="slogan">BUILD SOFTWARE BETTER, TOGETHER</string>
    <string name="my_work">My work</string>
    <string name="title_profile">Profile</string>
    <string name="title_pull_requests">Pull requests</string>
    <string name="title_issues">Issues</string>
    <string name="search">Search for repositories</string>
    <string name="avatar">avatar</string>
    <string name="get_user_starred">Starred</string>
    <string name="get_user_orgs">Organizations</string>
    <string name="stub_username">GitHub User</string>
    <string name="stub_login">nickname</string>
    <string name="stub_about">About me</string>
    <string name="stub_location">Undefined</string>
    <string name="stub_followers">Count of followers: </string>
    <string name="browse_code">Browse code</string>
    <string name="get_commits">Commits</string>
    <string name="readme_md" translatable="false">README.md</string>
    <string name="download">Download</string>
    <string name="repositories_sign">Repositories</string>
    <string name="files_sign">Files</string>
    <string name="followers_sign">Count of followers: </string>
</resources>