<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    >

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.profile.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorSecondary"
        android:minHeight="325dp"
        android:maxHeight="700dp"
        android:paddingBottom="50dp"
        tools:ignore="MissingConstraints">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/avatarAndUsernamePanel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="71dp"
            android:maxHeight="400dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="70dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.001"
            tools:ignore="MissingConstraints">

            <ImageView
                android:id="@+id/avatarImageView"
                android:layout_width="71dp"
                android:layout_height="71dp"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/avatar"
                android:order="0"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@drawable/octocat" />

            <TextView
                android:id="@+id/nameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="85dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="2dp"
                android:fontFamily="Inter"
                android:textColor="#090909"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/avatarImageView"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                android:text="@string/stub_username"/>

            <TextView
                android:id="@+id/loginTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="85dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="12dp"
                android:fontFamily="Inter"
                android:textColor="#4F4F59"
                android:textSize="16sp"
                android:textStyle="normal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/avatarImageView"
                app:layout_constraintTop_toBottomOf="@+id/nameTextView"
                android:text="@string/stub_login"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/bioTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/avatarAndUsernamePanel"
            android:textFontWeight="500"
            android:textSize="16sp"
            android:textStyle="normal"
            android:textColor="@android:color/black"
            app:layout_constraintVertical_bias="0.0"
            android:text="@string/stub_about"/>

        <TextView
            android:id="@+id/locationTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="Inter"
            android:textColor="@android:color/black"
            android:textFontWeight="500"
            android:textSize="16sp"
            android:textStyle="normal"
            app:drawableStartCompat="@drawable/location"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bioTextView"
            app:layout_constraintVertical_bias="0.0"
            android:drawablePadding="8dp"
            android:text="@string/stub_location"
            tools:targetApi="p" />

        <TextView
            android:id="@+id/followersTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="Inter"
            android:textColor="@android:color/black"
            android:textFontWeight="500"
            android:textSize="16sp"
            android:textStyle="normal"
            app:drawableStartCompat="@drawable/follower"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/locationTextView"
            app:layout_constraintVertical_bias="0.0"
            android:drawablePadding="8dp"
            android:text="@string/stub_followers"
            tools:targetApi="p" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/getUserRep"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_user_rep"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:fontFamily="Inter"
        android:textStyle="normal"
        android:textFontWeight="600"
        android:paddingStart="16dp"
        android:paddingTop="20dp"
        android:paddingEnd="20dp"
        android:paddingBottom="20dp"
        android:background="?attr/selectableItemBackground"
        app:drawableStartCompat="@drawable/repo_home"
        android:drawablePadding="8dp"
        android:clickable="true"
        android:focusable="true"
        tools:targetApi="p" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:alpha="0.2"
        android:background="#D9D9D9"
        app:layout_constraintTop_toBottomOf="@+id/getUserRep"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/getUserOrg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/getUserRep"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_user_orgs"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:fontFamily="Inter"
        android:textStyle="normal"
        android:textFontWeight="600"
        android:paddingStart="16dp"
        android:paddingTop="20dp"
        android:paddingEnd="20dp"
        android:paddingBottom="20dp"
        android:background="?attr/selectableItemBackground"
        app:drawableStartCompat="@drawable/orgs_image"
        android:drawablePadding="8dp"
        android:clickable="true"
        android:focusable="true"
        tools:targetApi="p" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:alpha="0.2"
        android:background="#D9D9D9"
        app:layout_constraintTop_toBottomOf="@+id/getUserOrg"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/getUserStarred"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/getUserOrg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_user_starred"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:fontFamily="Inter"
        android:textStyle="normal"
        android:textFontWeight="600"
        android:paddingStart="16dp"
        android:paddingTop="20dp"
        android:paddingEnd="20dp"
        android:paddingBottom="20dp"
        android:background="?attr/selectableItemBackground"
        app:drawableStartCompat="@drawable/starred_image"
        android:drawablePadding="8dp"
        android:clickable="true"
        android:focusable="true"
        tools:targetApi="p" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:alpha="0.2"
        android:background="#D9D9D9"
        app:layout_constraintTop_toBottomOf="@+id/getUserStarred"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
