<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".ui.home.HomeFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="4dp"
        app:titleTextAppearance="@style/home_title_font"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/myWorkTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/my_work"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        android:alpha="0.2"
        android:background="#D9D9D9"
        app:layout_constraintTop_toBottomOf="@+id/myWorkTitle"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/getUserRep"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myWorkTitle"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_user_rep"
        android:textColor="#000000"
        android:textSize="16sp"
        android:fontFamily="Inter"
        android:textStyle="normal"
        android:textFontWeight="600"
        android:clickable="true"
        android:paddingStart="16dp"
        android:paddingTop="20dp"
        android:paddingEnd="20dp"
        android:paddingBottom="20dp"
        android:background="?attr/selectableItemBackground"
        app:drawableStartCompat="@drawable/repo_home"
        android:focusable="true"
        android:drawablePadding="8dp"
        tools:targetApi="p" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:alpha="0.2"
        android:background="#D9D9D9"
        app:layout_constraintTop_toBottomOf="@+id/getUserRep"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/getUserPr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/getUserRep"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_user_pr"
        android:textColor="#000000"
        android:textSize="16sp"
        android:fontFamily="Inter"
        android:textStyle="normal"
        android:textFontWeight="600"
        android:clickable="true"
        android:paddingStart="16dp"
        android:paddingTop="20dp"
        android:paddingEnd="20dp"
        android:paddingBottom="20dp"
        android:background="?attr/selectableItemBackground"
        app:drawableStartCompat="@drawable/pr_home"
        android:focusable="true"
        android:drawablePadding="8dp"
        tools:targetApi="p" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:alpha="0.2"
        android:background="#D9D9D9"
        app:layout_constraintTop_toBottomOf="@+id/getUserPr"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/getUserIssue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/getUserPr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_user_issue"
        android:textColor="#000000"
        android:textSize="16sp"
        android:fontFamily="Inter"
        android:textStyle="normal"
        android:textFontWeight="600"
        android:clickable="true"
        android:paddingStart="16dp"
        android:paddingTop="20dp"
        android:paddingEnd="20dp"
        android:paddingBottom="20dp"
        android:background="?attr/selectableItemBackground"
        app:drawableStartCompat="@drawable/issues_home"
        android:focusable="true"
        android:drawablePadding="8dp"
        tools:targetApi="p" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:alpha="0.2"
        android:background="#D9D9D9"
        app:layout_constraintTop_toBottomOf="@+id/getUserIssue"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:textColor="#000000"
        android:textSize="16sp"
        android:fontFamily="Inter"
        android:textStyle="normal"
        android:textFontWeight="600"
        android:clickable="true"
        android:paddingStart="18dp"
        android:paddingTop="20dp"
        android:paddingEnd="16dp"
        android:paddingBottom="20dp"
        android:background="?attr/selectableItemBackground"
        app:drawableStartCompat="@drawable/logout_home"
        android:focusable="true"
        android:drawablePadding="8dp"
        tools:targetApi="p" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:alpha="0.2"
        android:background="#D9D9D9"
        app:layout_constraintTop_toBottomOf="@+id/logout"
        tools:ignore="MissingConstraints" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logout"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/userInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logout"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>